--- a/gunnyscript/Cargo.toml
+++ b/gunnyscript/Cargo.toml
@@ -7,3 +7,9 @@ description = """
     """
 
 [dependencies]
+bytes = { version = "1.1.0", default-features = false }
+fixed = { version = "1.12.0", default-features = false }
+time = { version = "0.3.7", default-features = false }
+
+[dev-dependencies]
+lazy_static = "1.4.0"
