--- a/gunny/Cargo.toml
+++ b/gunny/Cargo.toml
@@ -2,23 +2,7 @@
 name = "gunny"
 version = "0.1.0"
 edition = "2021"
-description = """
-    API for embedding Gunny, a versatile, generic static content generator.
-    """
+
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fixed = "1.11.0"
-glob = "0.3"
-handlebars = "4.2.0"
-rusqlite = "0.26.3"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_yaml = "0.8"
-thiserror = "1.0"
-time = { version = "0.3.5", features = [
-        "formatting",
-        "parsing",
-        "serde",
-        "serde-human-readable",
-    ] }
-toml = "0.5"
